<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.DrivingSchool</groupId>
    <artifactId>DrivingSchool</artifactId>
    <version>1.0.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>11.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc10 -->
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc10</artifactId>
            <version>19.8.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.1</version>
                <configuration>
                    <mainClass>org.DrivingSchool.App</mainClass>
                    <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base / javafx.runtime = ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls / javafx.scene.control.behavior = ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls / javafx.scene.control = ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base / javafx.binding = ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base / javafx.event = ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.stage=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.controls / javafx.scene.control.behavior = com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.controls / javafx.scene.control = com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.base / javafx.binding = com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/javafx.stage=com.jfoenix</option>
                        <option>--add-exports</option>
                        <option>javafx.base/javafx.event = com.jfoenix</option>
                        <!--                        <option>&#45;&#45;add-opens</option>-->
                        <!--                        <option>javafx.controls/javafx.scene.control.behavior=com.jfoenix</option>-->
                        <!--                        <option>&#45;&#45;add-opens</option>-->
                        <!--                        <option>javafx.controls/javafx.scene.control=com.jfoenix</option>-->
                        <!--                        <option>&#45;&#45;add-exports</option>-->
                        <!--                        <option>javafx.controls/javafx.scene.control.skin=com.jfoenix</option>-->
                    </options>
                </configuration>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.fxml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>Images/*</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>StyleSheet/*</include>
                </includes>
            </resource>
        </resources>

        <!-- -->
    </build>


</project>
